Attempt to upsert and destroy stacks
PRs should use unique stacks for previews,
otherwise they'll stomp on each other.

This generates a unique stack name based on the PR
and upserts that with the Pulumi action if needed.

We need the generated Pulumi.$stack.yaml for the destroy operation,
but the two job will be separate workflow runs with no shared context.
Try to work around it by uploading the stack artifact,
and using a third-party GitHub action to download it
as the official download-artifact action doesn't support this.

--- a/.github/workflows/pages_preview.yml
+++ b/.github/workflows/pages_preview.yml
@@ -42,11 +42,18 @@ jobs:
         id: publish
         with:
           command: up
-          stack-name: dev # When using an individual account, only use stack-name.
+          stack-name: asciidoctor-godoc-pr-preview-${{ github.event.pull_request.number }}
           comment-on-pr: true
           work-dir: preview
+          upsert: true
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+
+      - name: Upload stack configuration
+        uses: actions/upload-artifact@v3
+        with:
+          name: pulumi-stack-yaml
+          path: preview/Pulumi.asciidoctor-godoc-pr-preview-${{ github.event.pull_request.number }}.yaml
 
       - uses: peter-evans/create-or-update-comment@v2
         with:
@@ -77,12 +84,20 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+      - name: Download stack configuration
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          pr: ${{ github.event.pull_request.number }}
+          name: pulumi-stack-yaml
+          path: preview
+
       - name: Destroy preview
         uses: pulumi/actions@v3
         with:
           command: destroy
-          stack-name: dev
+          stack-name: asciidoctor-godoc-pr-preview-${{ github.event.pull_request.number }}
           comment-on-pr: true
           work-dir: preview
+          remove: true
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
