--- a/.github/workflows/pages_preview.yml
+++ b/.github/workflows/pages_preview.yml
@@ -49,11 +49,11 @@ jobs:
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
-      - name: Upload stack configuration
-        uses: actions/upload-artifact@v3
-        with:
-          name: pulumi-stack-yaml
-          path: preview/Pulumi.asciidoctor-godoc-pr-preview-${{ github.event.pull_request.number }}.yaml
+      # - name: Upload stack configuration
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: pulumi-stack-yaml
+      #     path: preview/Pulumi.asciidoctor-godoc-pr-preview-${{ github.event.pull_request.number }}.yaml
 
       - uses: peter-evans/create-or-update-comment@v2
         with:
@@ -84,12 +84,12 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Download stack configuration
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          pr: ${{ github.event.pull_request.number }}
-          name: pulumi-stack-yaml
-          path: preview
+      # - name: Download stack configuration
+      #   uses: dawidd6/action-download-artifact@v2
+      #   with:
+      #     pr: ${{ github.event.pull_request.number }}
+      #     name: pulumi-stack-yaml
+      #     path: preview
 
       - name: Destroy preview
         uses: pulumi/actions@v3
