--- a/.github/workflows/pages_preview.yml
+++ b/.github/workflows/pages_preview.yml
@@ -42,7 +42,7 @@ jobs:
         id: publish
         with:
           command: up
-          stack-name: asciidoctor-godoc-pr-preview-${{ github.event.pull_request.number }}
+          stack-name: pr-${{ github.event.pull_request.number }}
           comment-on-pr: true
           work-dir: preview
           upsert: true
@@ -53,7 +53,7 @@ jobs:
       #   uses: actions/upload-artifact@v3
       #   with:
       #     name: pulumi-stack-yaml
-      #     path: preview/Pulumi.asciidoctor-godoc-pr-preview-${{ github.event.pull_request.number }}.yaml
+      #     path: preview/Pulumi.pr-${{ github.event.pull_request.number }}.yaml
 
       - uses: peter-evans/create-or-update-comment@v2
         with:
@@ -95,7 +95,7 @@ jobs:
         uses: pulumi/actions@v3
         with:
           command: destroy
-          stack-name: asciidoctor-godoc-pr-preview-${{ github.event.pull_request.number }}
+          stack-name: pr-${{ github.event.pull_request.number }}
           comment-on-pr: true
           work-dir: preview
           remove: true
