Manually remove the stack
The 'remove' flag of pulumi/actions is not yet supported.

--- a/.github/workflows/pages_preview.yml
+++ b/.github/workflows/pages_preview.yml
@@ -98,6 +98,8 @@ jobs:
           stack-name: pr-${{ github.event.pull_request.number }}
           comment-on-pr: true
           work-dir: preview
-          remove: true
+          # remove: true # Not yet released
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+      - name: Delete stack
+        run: pulumi stack rm -y --stack abhinav/asciidoctor-godoc-preview/pr-${{ github.event.pull_request.number }}
